tests/transpiler/x/zig/slice.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/slice.zig:5:71: error: expected ',' after initializer
    try std.io.getStdOut().writer().print("{any}\n", .{[_]i64{1, 2, 3}[1..3]});
                                                                      ^
